maintenance page add with animation.css create

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2,10 +2,12 @@ body {
 	margin: 0;
 	font-size: 16px;
 	padding: 0;
-	font-family: "Poppins", sans-serif;
+	font-family: "Plus Jakarta Sans", sans-serif;
 	font-weight: 400;
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
 ul {
 	list-style: none;
 	margin: 0;
@@ -542,7 +544,6 @@ margin-right: 22px;
 	display: flex;
 	align-items: center;
   }
-  
   .time-input input[type="time"] {
 	width: 100%;
 	padding:8px;
@@ -561,4 +562,3 @@ margin-right: 22px;
 	margin: 0 12px;
 	font-size: 22px;
   }
-  
