--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,7 +2,6 @@
 	.hero-area-thumbnails {
 		width:52%;
 	}
-
 	/* .hero-area-content {
 		padding-bottom: 146px;
 	} */
@@ -16,7 +15,6 @@
 		margin-left: 15px;
 	}
 }
-
 @media all and (max-width:1199px) {
 	.navbar-collapse {
 		background: #8f8f8f;
@@ -44,7 +42,6 @@
 		width: 58.5%;
 	}
 	 
-
 }
 @media all and (min-width: 992px) {
 	.Contest-info-controls ul li{
@@ -111,11 +108,9 @@
 	.navbar-toggler.icon {
 		padding: 5px 8px;
 	}
-
 	.navbar-toggler span i {
 		font-size: 25px;
 	}
-
 	#outside-click,
 	.header-right {
 		padding:5px 0px;
@@ -139,8 +134,6 @@
 		width: 42%;
 	}
 
-	
-
 	.country-menu.dropdown-menu[data-bs-popper] {
 		min-width: 290px;
 	}
@@ -154,7 +147,6 @@
 		max-height: 90vh;
 		margin-top: 10px;
 	}
-
 	.megamenu::after {
 		display: none;
 	}
@@ -289,6 +281,19 @@
 }
 
 @media all and (max-width:767px) {
+	.maintenance-thumbnails-icon-1 {
+		left: 17%;
+		width: 130px;
+		top: 0px;
+	}
+	.maintenance-thumbnails-icon-2 {
+		right: 26%;
+		width: 90px;
+		top: -10px;
+	}
+	.countdown-area .g-20{
+		gap: 10px;
+	}
 	 
 	.custom-checkbox {
 		padding: 10px 12px;
@@ -570,8 +575,22 @@
 	.countdown-box {
 		min-width: 50px;
 	}
+	.maintenance-thumbnails-icon-3 {
+		bottom:10px;
+	}
+	.maintenance-thumbnails{
+		margin-top: 30px;
+	}
+	.maintenance-thumbnails {
+		padding-bottom:40px;
+	}
 }
 @media all and (max-width:575px) {
+	.maintenance-thumbnails-icon-1 {
+		left: 8%;
+		width: 130px;
+		top: -30px;
+	}
 	.primary-btn{
 		font-size: 16px;
 	}
