--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,9 @@ li.nav-item.dropdown li a {
 	background: linear-gradient(-160deg, #2d3235 0%, #000 40.39%);
 	padding-top: 200px;
 	padding-bottom: 200px;
+	background-size:cover;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 .hero-area-thumbnails {
@@ -179,7 +182,6 @@ li.nav-item.dropdown li a {
 	position: relative;
 	z-index: 9;
 }
-
 .hero-area-content p {
 	color: #fff;
 	margin-top:75px;
@@ -1045,7 +1047,7 @@ button.tablinks.active .tab-svg {
 }
 .footer-description p {
 	color: #FFFFFF;
-	margin-bottom: 66px;
+	margin-bottom:30px;
 	font-size: 16px;
 	line-height: 26px;
 	margin-top:20px;
@@ -1085,7 +1087,8 @@ button.tablinks.active .tab-svg {
 	border-radius: 50%;
 }
 .social-menu ul li a:hover{
-	background-color: #f5c448;;
+	background-color: #f5c448;
+	box-shadow: rgba(233, 199, 9, 0.25) 0px 20px 55px, rgba(228, 155, 19, 0.12) 0px -12px 30px, rgba(202, 206, 5, 0.12) 0px 4px 6px, rgba(229, 233, 11, 0.17) 0px 12px 13px, rgba(230, 178, 8, 0.6) 0px -3px 5px;
 }
 .social-menu ul li a i{
 	font-size: 18px;
@@ -1657,6 +1660,11 @@ button.tablinks.active .tab-svg {
 	height: 1px;
 	width: 100%;
 	background-color: #04151F1A;
+  }
+  .line-2{
+	height: 1px;
+	width: 100%;
+	background-color: #FFFFFF1A;
   }
   .audcad-buy-sell-box{
 	background: #F5C44833;
@@ -2469,3 +2477,72 @@ button.tablinks.active .tab-svg {
 	background-color:#fff;
 }
 /* legal info page end */
+/* Risk warning start*/
+.warning-section{
+	position: sticky;
+	bottom: 0;
+	background-color: #F5C448;
+	padding:10px 15px;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	border-radius:5px 5px 0 0;
+	z-index: 9;
+}
+.warning-section p{
+	color:#000;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 28px;
+}
+.warning-section p b{
+	color:rgb(252, 55, 55);
+}
+/* Risk warning end*/
+/* maintenance start */
+.header-logo img{
+	width: 177px;
+}
+.time-label{
+	font-size: 16px;
+	text-align: center;
+	color: #FFFFFFCC;
+
+}
+.time-value{
+	font-weight: 500;
+	font-size: 44px;
+	text-align: center;
+	color:#fff;
+}
+.countdown-area ul li:nth-child(even) {
+ 
+	margin-top: -25px;
+	font-weight: 500;
+	font-size: 44px;
+ 
+	color:#fff;
+}
+.countdown-area h5{
+	font-size: 22px;
+	font-weight: 700;
+}
+.maintenance-thumbnails-icon-1{
+	position: absolute;
+	left:20%;
+	width: 160px;
+	top:-10px; 
+}
+.maintenance-thumbnails-icon-2{
+	position: absolute;
+	right:33%;
+	width: 120px;
+	top:-10px; 
+}
+.maintenance-thumbnails-icon-3{
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width:100px;
+	bottom:30px; 
+}
+/* maintenance end */
