--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,7 @@
 @media all and (max-width:1280px) {
-	.hero-area-thumbnails {
+	/* .hero-area-thumbnails {
 		width:52%;
-	}
+	} */
 	/* .hero-area-content {
 		padding-bottom: 146px;
 	} */
@@ -73,6 +73,9 @@
 }
 
 @media all and (max-width:991px) {
+	.footer-description img {
+		margin-bottom: 30px;
+	}
 	.advantage-card h4 {
 		font-size: 28px;
 		line-height: 40px;
@@ -133,9 +136,9 @@
 		gap: 0px;
 	}
 
-	.hero-area-thumbnails {
+	/* .hero-area-thumbnails {
 		width: 42%;
-	}
+	} */
 
 	.country-menu.dropdown-menu[data-bs-popper] {
 		min-width: 290px;
@@ -244,7 +247,7 @@
 	}
 	.hero-main-area {
 		padding-top: 130px;
-		padding-bottom: 110px;
+		 
 	}
 	.opening-selected ul li a {
 		font-size: 20px;
@@ -322,9 +325,9 @@
 	.megamenu {
 		padding: 25px 10px;
 	}
-    .hero-area-thumbnails {
+    /* .hero-area-thumbnails {
         width: 28%;
-    }
+    } */
 	.footer-description {
 		text-align: center;
 	}
