--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,9 @@
+:root{
+  --primary:#dfcc;
+}
+
+
+
 body {
   margin: 0;
   font-size: 16px;
@@ -58,7 +64,7 @@ p {
 }
 .primary-btn {
   font-size: 18px;
-  letter-spacing:1px;
+  letter-spacing: 1px;
   padding: 10px 22px;
   display: inline-block;
   color: #23262f !important;
