--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,17 @@ li.nav-item.dropdown li a {
   border-radius: 20px;
   background: rgba(245, 196, 72, 0.21);
 }
+.plan-card-header p {
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 12px;
+}
+.plan-card-header h6 {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 36px;
+  color: #04151f;
+}
 .plan-card-header span {
   background-color: #fff;
   border-radius: 18px;
@@ -694,7 +705,7 @@ table {
 .tabcontent table th {
   color: #000;
   border-bottom: 1px solid #dbdbdb;
-  font-weight:600;
+  font-weight: 600;
 }
 .tabcontent table tr td:last-child,
 .tabcontent table tr th:last-child {
@@ -2504,7 +2515,7 @@ table {
 /* legal info page end */
 /* Risk warning start*/
 .warning-section {
-  position: sticky;
+  position: sticky !important;
   bottom: 0;
   background-color: #f5c448;
   padding: 10px 15px;
@@ -2523,7 +2534,6 @@ table {
     visibility: visible;
   }
 }
-
 .warning-mobile-view {
   position: absolute;
   display: flex;
@@ -2538,13 +2548,11 @@ table {
   background-color: #f5c448;
   box-shadow: rgba(70, 74, 78, 0.5) 2px 8px 24px;
 }
-
 .warning-mobile-view i {
   font-size: 20px;
   color: #fff;
   transition: transform 0.3s ease-in-out;
 }
-
 .warning-content p {
   color: #000;
   font-size: 14px;
@@ -2553,19 +2561,15 @@ table {
   text-align: justify;
   transition: max-height 0.3s ease-in-out;
 }
-
 .warning-section p b {
   color: rgb(252, 55, 55);
 }
-
 .warning-text {
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
- 
   max-width: 100%;
 }
-
 .show-full-text .warning-text {
   white-space: normal;
   overflow: visible;
@@ -2685,5 +2689,10 @@ table {
   padding: 25px;
   border-radius: 15px;
 }
+.disclaimer{
+  text-align: justify;
+  color:#fff;
+  opacity:0.7;
+  font-size: 16px;
+}
 /* End confirmation modal */
- 
