--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,11 +481,33 @@ li.nav-item.dropdown li a {
   line-height: 24px;
   margin-top: 12px;
 }
+.plan-icon{
+  border-radius:50%;
+  background-color:#fff;
+  height:55px;
+  width:55px;
+  padding:10px;
+  text-align: center;
+  margin: auto;
+}
 .plan-card-header h6 {
-  font-size: 28px;
+  position: relative;
+  font-size: 27px;
   font-weight: 500;
   line-height: 36px;
   color: #04151f;
+}
+.plan-card-header h6:after{
+  content:"";
+  position: absolute;
+  left: 0;
+  right: 0;
+  width:60px;
+  height: 5px;
+  border-radius: 10px;
+  margin: auto;
+  bottom: -12px;
+  background-color:#F5C448;
 }
 .plan-card-header span {
   background-color: #fff;
