--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2711,10 +2711,11 @@ table {
   padding: 25px;
   border-radius: 15px;
 }
-.disclaimer{
+.disclaimer {
   text-align: justify;
-  color:#fff;
-  opacity:0.7;
-  font-size: 16px;
+  color: #ffffff;
+  opacity: 0.5;
+  font-size: 14px;
+  line-height: 24px;
 }
 /* End confirmation modal */
