popular plan text add

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -732,6 +732,9 @@
     width: 45px;
     border-radius: 50%;
   }
+  .disclaimer {
+    font-size: 10px !important;
+  }
 }
 @media all and (max-width: 480px) {
   .country-menu.dropdown-menu[data-bs-popper] {
